@@ -70,117 +70,18 @@ public class DatabaseUpgrades {
 	/**
 	 *
 	 */
-	public static List<WikiMessage> upgrade090(List<WikiMessage> messages) throws WikiException {
+	public static List<WikiMessage> upgrade100(List<WikiMessage> messages) throws WikiException {
 		TransactionStatus status = null;
 		try {
 			status = DatabaseConnection.startTransaction(getTransactionDefinition());
 			Connection conn = DatabaseConnection.getConnection();
-			// add the namespace tables
-			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_NAMESPACE_TABLE", conn);
-			messages.add(new WikiMessage("upgrade.message.db.table.added", "jam_namespace"));
-			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_NAMESPACE_TRANSLATION_TABLE", conn);
-			messages.add(new WikiMessage("upgrade.message.db.table.added", "jam_namespace_translation"));
-			// populate the namespace table
-			WikiDatabase.setupDefaultNamespaces();
-			messages.add(new WikiMessage("upgrade.message.db.data.added", "jam_namespace"));
-			// update jam_topic to add a namespace column, defaulted to the main namespace
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_NAMESPACE_ID", conn);
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_NAMESPACE_ID_CONSTRAINT", conn);
-			messages.add(new WikiMessage("upgrade.message.db.column.added", "namespace_id", "jam_topic"));
-			// update jam_topic to add page_name and page_name_lower
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_PAGE_NAME", conn);
-			messages.add(new WikiMessage("upgrade.message.db.column.added", "page_name", "jam_topic"));
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER", conn);
-			messages.add(new WikiMessage("upgrade.message.db.column.added", "page_name_lower", "jam_topic"));
-			// add an index for topic_id on the jam_topic_version table
-			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_TOPIC_VERSION_TOPIC_INDEX", conn);
-			messages.add(new WikiMessage("upgrade.message.db.data.updated", "jam_topic_version"));
-		} catch (SQLException e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			logger.error("Database failure during upgrade", e);
-			throw new WikiException(new WikiMessage("upgrade.error.fatal", e.getMessage()));
-		} catch (DataAccessException e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			logger.error("Database failure during upgrade", e);
-			throw new WikiException(new WikiMessage("upgrade.error.fatal", e.getMessage()));
-		}
-		DatabaseConnection.commit(status);
-		try {
-			status = DatabaseConnection.startTransaction(getTransactionDefinition());
-			Connection conn = DatabaseConnection.getConnection();
-			// populate jam_topic.namespace_id, jam_topic.page_name and jam_topic.page_name_lower
-			int numUpdated = WikiDatabase.fixIncorrectTopicNamespaces();
-			messages.add(new WikiMessage("admin.maintenance.message.topicsUpdated", Integer.toString(numUpdated)));
-			// add not null constraints for jam_topic.page_name and jam_topic.page_name_lower
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT", conn);
-			messages.add(new WikiMessage("upgrade.message.db.column.modified", "page_name", "jam_topic"));
-			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT", conn);
-			messages.add(new WikiMessage("upgrade.message.db.column.modified", "page_name_lower", "jam_topic"));
-			// add the indexes after adding the not null constraint, otherwise MS SQL Server gets angry
-			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_TOPIC_PAGE_NAME_INDEX", conn);
-			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_TOPIC_PAGE_NAME_LOWER_INDEX", conn);
-		} catch (SQLException e) {
-			messages.add(new WikiMessage("upgrade.error.nonfatal", e.getMessage()));
-			// do not throw this error and halt the upgrade process - populating the field
-			// is not required for existing systems.
-			logger.warn("Failure while populating correct namespace_id values in the jam_topic table.  Try running the 'Fix Incorrect Topic Namespaces' from Special:Maintenance to complete this step.", e);
-			try {
-				DatabaseConnection.rollbackOnException(status, e);
-			} catch (Exception ex) {
-				// ignore
-			}
-			status = null; // so we do not try to commit
-		} catch (DataAccessException e) {
-			messages.add(new WikiMessage("upgrade.error.nonfatal", e.getMessage()));
-			// do not throw this error and halt the upgrade process - populating the field
-			// is not required for existing systems.
-			logger.warn("Failure while populating correct namespace_id values in the jam_topic table.  Try running the 'Fix Incorrect Topic Namespaces' from Special:Maintenance to complete this step.", e);
-			try {
-				DatabaseConnection.rollbackOnException(status, e);
-			} catch (Exception ex) {
-				// ignore
-			}
-			status = null; // so we do not try to commit
-		}
-		if (status != null) {
-			DatabaseConnection.commit(status);
-		}
-		return messages;
-	}
-
-	/**
-	 * The following updates the jam_virtual_wiki table, but these changes are required for
-	 * a successful 0.9.0 upgrade so move them into a separate method so that they can be
-	 * executed before anything else.
-	 */
-	public static List<WikiMessage> preUpgrade100(List<WikiMessage> messages) throws WikiException {
-		TransactionStatus status = null;
-		try {
-			status = DatabaseConnection.startTransaction(getTransactionDefinition());
-			Connection conn = DatabaseConnection.getConnection();
+			// update the jam_virtual_wiki table
 			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_100_ADD_VIRTUAL_WIKI_LOGO_URL", conn);
 			messages.add(new WikiMessage("upgrade.message.db.column.added", "logo_image_url", "jam_virtual_wiki"));
 			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_100_ADD_VIRTUAL_WIKI_SITE_NAME", conn);
 			messages.add(new WikiMessage("upgrade.message.db.column.added", "site_name", "jam_virtual_wiki"));
 			WikiBase.getDataHandler().executeUpgradeUpdate("UPGRADE_100_ADD_VIRTUAL_WIKI_META_DESCRIPTION", conn);
 			messages.add(new WikiMessage("upgrade.message.db.column.added", "meta_description", "jam_virtual_wiki"));
-		} catch (SQLException e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			logger.error("Database failure during upgrade", e);
-			throw new WikiException(new WikiMessage("upgrade.error.fatal", e.getMessage()));
-		}
-		DatabaseConnection.commit(status);
-		return messages;
-	}
-
-	/**
-	 *
-	 */
-	public static List<WikiMessage> upgrade100(List<WikiMessage> messages) throws WikiException {
-		TransactionStatus status = null;
-		try {
-			status = DatabaseConnection.startTransaction(getTransactionDefinition());
-			Connection conn = DatabaseConnection.getConnection();
 			// add the jam_topic_links table
 			WikiBase.getDataHandler().executeUpgradeUpdate("STATEMENT_CREATE_TOPIC_LINKS_TABLE", conn);
 			messages.add(new WikiMessage("upgrade.message.db.table.added", "jam_topic_links"));
