@@ -142,10 +142,6 @@ STATEMENT_SELECT_WIKI_USERS = \
     select top ? login from jam_wiki_user \
     where jam_wiki_user.id > ? \
     order by login
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name_lower NOT NULL
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name NOT NULL
 UPGRADE_100_DROP_VIRTUAL_WIKI_DEFAULT_TOPIC_NOT_NULL = \
     alter table jam_virtual_wiki alter column default_topic_name NULL
     
