@@ -573,15 +573,6 @@ STATEMENT_SELECT_WIKI_USERS = \
                  + ' order by login ' \
         EXEC(@SQL) \
     END
-# alter table has different syntax with MS SQL
-UPGRADE_090_ADD_TOPIC_NAMESPACE_ID = \
-    alter table jam_topic add namespace_id INTEGER DEFAULT 0 NOT NULL
-# alter table has different syntax with MS SQL
-UPGRADE_090_ADD_TOPIC_PAGE_NAME = \
-    alter table jam_topic add page_name VARCHAR(200)
-# alter table has different syntax with MS SQL
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER = \
-    alter table jam_topic add page_name_lower VARCHAR(200)
 UPGRADE_100_ADD_VIRTUAL_WIKI_LOGO_URL = \
     alter table jam_virtual_wiki add logo_image_url VARCHAR(200)
 UPGRADE_100_ADD_VIRTUAL_WIKI_SITE_NAME = \
