@@ -190,11 +190,5 @@ STATEMENT_INSERT_LOG_ITEMS_MOVE = \
     AND jam_topic.redirect_to is not null \
     AND jam_topic_version.edit_type = ?
 # MySql seems not to like "alter column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic modify page_name_lower VARCHAR(200) NOT NULL
-# MySql seems not to like "alter column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic modify page_name VARCHAR(200) NOT NULL
-# MySql seems not to like "alter column"
 UPGRADE_100_DROP_VIRTUAL_WIKI_DEFAULT_TOPIC_NOT_NULL = \
     alter table jam_virtual_wiki modify default_topic_name VARCHAR(200) NULL
